# qa_guru_diplom_api

./: .env_example  README.md  pyproject.toml
framework/: demoqa_with_env.py
tests/: conftest.py  test_demo_web_shop.py  test_reqres.py
