[tool.poetry]
name = "qa-guru-diplom-api"
version = "0.1.0"
description = "API and API with UI tests"
authors = ["Rustam Dzhafarov <rustamd74@gmail.com>"]
readme = "README.md"
packages = [{include = "qa_guru_diplom_api"}]

[tool.poetry.dependencies]
python = "^3.10.5"
pytest = "^7.2.1"
selene = "^2.0.0b17"
dynaconf = "^3.1.11"
requests = "^2.28.2"
pytest-voluptuous = "^1.2.0"
voluptuous = "^0.13.1"
allure-pytest = "^2.12.0"
curlify = "^2.2.1"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
